--- a/styles.css
+++ b/styles.css
@@ -3,4 +3,10 @@
     display: inline-block;
     height: 80%;
     width: 40%;
+    position: relative;
 }
+
+.rocket {
+    position: inherit;   
+}
+
